tests/wpt/tests/third_party/test262/test/language/comments/S7.4_A2_T2.js
// Copyright 2009 the Sputnik authors.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
info: Correct interpretation of multi line comments
es5id: 7.4_A2_T2
description: Try use /*CHECK#1/. This is not closed multi line comment
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

/*CHECK#1/
